Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       margin-top: 50px;
     }
     .highlight, .selected {
-      background-color: #ffeeba; /* Color resaltado */
+      background-color: #4c9141; /* Color resaltado */
     }
     .selected {
       background-color: red !important; /* Cambiar a color rojo las celdas seleccionadas */
