Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       margin-top: 50px;
     }
     .highlight, .selected {
-      background-color: #4c9141; /* Color resaltado */
+      background-color: ; /* Color resaltado */
     }
     .selected {
-      background-color: red !important; /* Cambiar a color rojo las celdas seleccionadas */
+      background-color: #4c9141 !important; /* Cambiar a color rojo las celdas seleccionadas */
       color: white;
     }
   </style>
