--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
           }
 
           // Función para guardar las celdas seleccionadas en localStorage
-          //function guardarSeleccionadas() {
-            //let seleccionadas = [];
-            //document.querySelectorAll('.selected').forEach(function(celda) {
-              //seleccionadas.push(celda.getAttribute('data-valor'));
-            //});
-            //localStorage.setItem('celdasSeleccionadas', JSON.stringify(seleccionadas));
-         // }
+          function guardarSeleccionadas() {
+            let seleccionadas = [];
+            document.querySelectorAll('.selected').forEach(function(celda) {
+              seleccionadas.push(celda.getAttribute('data-valor'));
+            });
+            localStorage.setItem('celdasSeleccionadas', JSON.stringify(seleccionadas));
+          }
 
           // Evento para marcar una celda como seleccionada al hacer clic y sumar su valor
           document.addEventListener('DOMContentLoaded', function() {
