--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <div class="container table-container">
-    <h1 class="text-center mb-4">Tabla de Ahorro objetivo 31 de julio <b>1250,50</b></h1>
+    <h1 class="text-center mb-4">Tabla de Ahorro objetivo 31 de julio <b>1250,50€</b></h1>
     <p class="text-center">Total Ahorrado: <span id="contador">0.00</span> €</p> <!-- Contador de euros -->
     
     <table class="table table-bordered">
