Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div class="container table-container">
     <h1 class="text-center mb-4">Tabla de Ahorro objetivo 31 de julio <b>1250,50€</b></h1>
-    <p class="text-center">Total Ahorrado: <span id="contador">0.00</span> €</p> <!-- Contador de euros -->
+    <p class="text-center"><h2>Total Ahorrado</h2>: <span id="contador">0.00</span> €</p> <!-- Contador de euros -->
     
     <table class="table table-bordered">
       <thead class="table-dark">
